# personal_finance_manager_claude

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  HANDOVER.md  IDEAS.md  PFM_system_analysis.md  PROJECT.md  TASKS.md  app.json  dashboard_and_gamification.md  docker-compose.prod.yml  docker-compose.yml  improvements_and_ux_evolutions.md  package.json  pencil-brand-identity.pen  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json  todo.md
.githooks/: pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
brand/: zeta-dev-handoff.html
design/: mockups.pen  web-mockups.pen
docs/: FRONTEND_STANDARDS.md  deployment.md  ui-component-recommendations.md  ui-recommendations-showcase.html
infra/: setup-vps.sh
mobile/: .gitignore  ANDROID_RELEASE.md  app.json  eas.json  package.json  react-native-view-shot.d.ts  tailwind.config.js
mockups/: dashboard-showcase.html  (+1 more)
services/pdf_parser/: .dockerignore  Dockerfile  insights.md  main.py  models.py  pyproject.toml  storage.py  test_parser.py
services/pdf_parser/parsers/: __init__.py  bancolombia_credit_card.py  bancolombia_loan.py  bancolombia_savings.py  bogota_credit_card.py  bogota_loan.py  bogota_savings.py  confiar_credit_card.py  davivienda_loan.py  davivienda_savings.py  falabella_credit_card.py  lulo_loan.py  lulo_savings.py  nequi_savings.py  nu_credit_card.py  opendataloader_fallback.py  popular_credit_card.py  utils.py
services/pdf_parser/pfm_pdf_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webapp/: Dockerfile  (+6 more)
(+585 files in other folders)
