[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pfm-pdf-parser"
version = "0.1.0"
description = "Bank PDF statement parser for Personal Finance Manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
pdf-parser = "main:run"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "models"]
packages = ["parsers"]
