[project]
name = "pfm-pdf-parser"
version = "0.1.0"
description = "Bank PDF statement parser for Personal Finance Manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.9",
    "supabase>=2.10.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
]

[project.scripts]
pdf-parser = "main:run"
test-parser = "test_parser:main"
